--- a/app/src/main/res/layout/activity_daily_report_index.xml
+++ b/app/src/main/res/layout/activity_daily_report_index.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="jp.sasuraiusagi3.nippohub_daily.Activities.DailyReportIndexActivity">
+    tools:context="jp.sasuraiusagi3.nippohub_daily.activities.DailyReportIndexActivity">
 
     <TextView
         android:layout_width="wrap_content"
