--- a/app/src/main/res/layout/activity_daily_report_index.xml
+++ b/app/src/main/res/layout/activity_daily_report_index.xml
@@ -11,5 +11,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
     </ListView>
+    <Button
+        android:id="@+id/dailyReportIndexBtnToNew"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        app:layout_constraintTop_toBottomOf="@+id/dailyReportIndexDailyReportList"
+        android:text="new" />
 
 </android.support.constraint.ConstraintLayout>
