--- a/app/src/main/res/layout/activity_daily_report_show.xml
+++ b/app/src/main/res/layout/activity_daily_report_show.xml
@@ -10,4 +10,11 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
     </WebView>
+    <Button
+        android:id="@+id/dailyReportShowBtnToEdit"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/dailyReportShowWebView"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:text="編集" />
 </android.support.constraint.ConstraintLayout>
