--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -66,4 +66,10 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginTop="40dp" />
+    <Button
+        android:id="@+id/signUpButtonToPrivacy"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/signUpButtonSubmit"
+        android:text="プライバシーポリシー" />
 </android.support.constraint.ConstraintLayout>
