--- a/app/src/main/res/layout/activity_edit_daily_report.xml
+++ b/app/src/main/res/layout/activity_edit_daily_report.xml
@@ -5,10 +5,23 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="jp.sasuraiusagi3.nippohub_daily.activities.EditDailyReportActivity">
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/editDailyReportToolBar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:minHeight="?attr/actionBarSize"
+        android:background="?attr/colorPrimary">
+        <Button
+            android:id="@+id/editDailyReportButtonToBack"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="戻る" />
+    </android.support.v7.widget.Toolbar>
     <TextView
         android:id="@+id/editDailyReportLabelDate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/editDailyReportToolBar"
         android:text="date" />
     <DatePicker
         android:id="@+id/editDailyReportFormDate"
