--- a/app/src/main/res/layout/activity_agreements.xml
+++ b/app/src/main/res/layout/activity_agreements.xml
@@ -6,18 +6,23 @@
     android:layout_height="match_parent"
     tools:context="jp.sasuraiusagi3.nippohub_daily.activities.AgreementsActivity">
 
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/agreementsToolBar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:minHeight="?attr/actionBarSize"
+        android:background="?attr/colorPrimary">
+        <Button
+            android:id="@+id/agreementsButtonToBack"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="閉じる" />
+    </android.support.v7.widget.Toolbar>
     <WebView
         android:id="@+id/agreementsWebview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"></WebView>
-
-    <Button
-        android:id="@+id/agreementsButtonToBack"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:layout_marginBottom="40dp"
-        app:layout_constraintTop_toBottomOf="@+id/agreementsWebview"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:text="閉じる" />
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/agreementsToolBar"
+        app:layout_constraintBottom_toBottomOf="parent">
+    </WebView>
 </android.support.constraint.ConstraintLayout>
