add: 設定への導線

--- a/app/src/main/res/layout/activity_daily_report_index.xml
+++ b/app/src/main/res/layout/activity_daily_report_index.xml
@@ -17,6 +17,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="new" />
+        <Button
+            android:id="@+id/dailyReportIndexButtonToSettings"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="setting" />
     </android.support.v7.widget.Toolbar>
     <ListView
         android:id="@+id/dailyReportIndexDailyReportList"
