--- a/app/src/main/res/layout/activity_daily_report_index.xml
+++ b/app/src/main/res/layout/activity_daily_report_index.xml
@@ -10,23 +10,25 @@
         android:id="@+id/dailyReportIndexToolBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:minHeight="?attr/actionBarSize"
-        android:background="?attr/colorPrimary">
+        android:background="?attr/colorPrimary"
+        android:minHeight="?attr/actionBarSize">
+
         <Button
             android:id="@+id/dailyReportIndexButtonToNew"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="new" />
+
         <Button
             android:id="@+id/dailyReportIndexButtonToSettings"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="setting" />
     </android.support.v7.widget.Toolbar>
+
     <ListView
         android:id="@+id/dailyReportIndexDailyReportList"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/dailyReportIndexToolBar">
-    </ListView>
+        app:layout_constraintTop_toBottomOf="@id/dailyReportIndexToolBar"></ListView>
 </android.support.constraint.ConstraintLayout>
