--- a/app/src/main/res/layout/activity_daily_report_show.xml
+++ b/app/src/main/res/layout/activity_daily_report_show.xml
@@ -5,30 +5,33 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="jp.sasuraiusagi3.nippohub_daily.activities.DailyReportShowActivity">
+
     <android.support.v7.widget.Toolbar
         android:id="@+id/dailyReportShowToolBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:minHeight="?attr/actionBarSize"
-        android:background="?attr/colorPrimary">
+        android:background="?attr/colorPrimary"
+        android:minHeight="?attr/actionBarSize">
+
         <Button
             android:id="@+id/dailyReportShowButtonToBack"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="戻る" />
+
         <Button
             android:id="@+id/dailyReportShowButtonToEdit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="編集" />
     </android.support.v7.widget.Toolbar>
+
     <WebView
         android:id="@+id/dailyReportShowWebView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginTop="0dp"
         android:layout_marginBottom="0dp"
-        app:layout_constraintTop_toBottomOf="@id/dailyReportShowToolBar"
-        app:layout_constraintBottom_toBottomOf="parent">
-    </WebView>
+        android:layout_marginTop="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/dailyReportShowToolBar"></WebView>
 </android.support.constraint.ConstraintLayout>
