--- a/app/src/main/res/layout/activity_privacy.xml
+++ b/app/src/main/res/layout/activity_privacy.xml
@@ -5,23 +5,25 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="jp.sasuraiusagi3.nippohub_daily.activities.PrivacyActivity">
+
     <android.support.v7.widget.Toolbar
         android:id="@+id/privacyToolBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:minHeight="?attr/actionBarSize"
-        android:background="?attr/colorPrimary">
+        android:background="?attr/colorPrimary"
+        android:minHeight="?attr/actionBarSize">
+
         <Button
             android:id="@+id/privacyButtonToBack"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="閉じる" />
     </android.support.v7.widget.Toolbar>
+
     <WebView
         android:id="@+id/privacyWebview"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/privacyToolBar"
-        app:layout_constraintBottom_toBottomOf="parent">
-    </WebView>
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/privacyToolBar"></WebView>
 </android.support.constraint.ConstraintLayout>
