--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -10,52 +10,57 @@
         android:id="@+id/signInLabelEmail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
         android:text="email"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="40dp" />
+        app:layout_constraintTop_toTopOf="parent" />
+
     <EditText
         android:id="@+id/signInFormEmail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/signInLabelEmail"
+        android:layout_marginTop="10dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="10dp" />
+        app:layout_constraintTop_toBottomOf="@id/signInLabelEmail" />
+
     <TextView
         android:id="@+id/signInLabelPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
         android:text="password"
-        app:layout_constraintTop_toBottomOf="@id/signInFormEmail"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="20dp" />
+        app:layout_constraintTop_toBottomOf="@id/signInFormEmail" />
+
     <EditText
         android:id="@+id/signInFormPassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/signInLabelPassword"
+        android:layout_marginTop="10dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="10dp" />
+        app:layout_constraintTop_toBottomOf="@id/signInLabelPassword" />
+
     <Button
         android:id="@+id/signInButtonSubmit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
         android:text="サインイン"
-        app:layout_constraintTop_toBottomOf="@id/signInFormPassword"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="40dp" />
+        app:layout_constraintTop_toBottomOf="@id/signInFormPassword" />
+
     <Button
         android:id="@+id/signInButtonToSignUp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
         android:text="登録する"
-        app:layout_constraintTop_toBottomOf="@id/signInButtonSubmit"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="20dp" />
+        app:layout_constraintTop_toBottomOf="@id/signInButtonSubmit" />
 </android.support.constraint.ConstraintLayout>
