--- a/app/src/main/res/layout/activity_daily_report_show.xml
+++ b/app/src/main/res/layout/activity_daily_report_show.xml
@@ -13,17 +13,29 @@
         android:background="?attr/colorPrimary"
         android:minHeight="?attr/actionBarSize">
 
-        <Button
-            android:id="@+id/dailyReportShowButtonToBack"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="戻る" />
+        <android.support.constraint.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-        <Button
-            android:id="@+id/dailyReportShowButtonToEdit"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="編集" />
+            <Button
+                android:id="@+id/dailyReportShowButtonToBack"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@android:color/transparent"
+                android:text="@string/back"
+                android:textColor="@color/colorLink"
+                app:layout_constraintLeft_toLeftOf="parent" />
+
+            <Button
+                android:id="@+id/dailyReportShowButtonToEdit"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@android:color/transparent"
+                android:text="@string/editDailyReport"
+                android:textColor="@color/colorLink"
+                app:layout_constraintRight_toRightOf="parent" />
+        </android.support.constraint.ConstraintLayout>
+
     </android.support.v7.widget.Toolbar>
 
     <WebView
@@ -33,5 +45,5 @@
         android:layout_marginBottom="0dp"
         android:layout_marginTop="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/dailyReportShowToolBar"></WebView>
+        app:layout_constraintTop_toBottomOf="@id/dailyReportShowToolBar" />
 </android.support.constraint.ConstraintLayout>
