--- a/app/src/main/res/layout/activity_edit_daily_report.xml
+++ b/app/src/main/res/layout/activity_edit_daily_report.xml
@@ -17,53 +17,82 @@
             android:id="@+id/editDailyReportButtonToBack"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="戻る" />
+            android:background="@android:color/transparent"
+            android:text="@string/back"
+            android:textColor="@color/colorLink" />
     </android.support.v7.widget.Toolbar>
 
-    <TextView
-        android:id="@+id/editDailyReportLabelDate"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="date"
-        app:layout_constraintTop_toBottomOf="@id/editDailyReportToolBar" />
-
-    <DatePicker
-        android:id="@+id/editDailyReportFormDate"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:datePickerMode="spinner"
-        app:layout_constraintTop_toBottomOf="@+id/editDailyReportLabelDate" />
-
-    <TextView
-        android:id="@+id/editDailyReportLabelTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="title"
-        app:layout_constraintTop_toBottomOf="@+id/editDailyReportFormDate" />
-
-    <EditText
-        android:id="@+id/editDailyReportFormTitle"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/editDailyReportLabelTitle" />
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/editDailyReportToolBar">
 
-    <TextView
-        android:id="@+id/editDailyReportLabelContent"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="content"
-        app:layout_constraintTop_toBottomOf="@+id/editDailyReportFormTitle" />
+        <android.support.constraint.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingBottom="32dp"
+            android:paddingEnd="16dp"
+            android:paddingStart="16dp"
+            android:paddingTop="20dp">
 
-    <EditText
-        android:id="@+id/editDailyReportFormContent"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/editDailyReportLabelContent" />
+            <TextView
+                android:id="@+id/editDailyReportLabelDate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/dailyReportDate"
+                android:textSize="16sp" />
 
-    <Button
-        android:id="@+id/editDailyReportButtonSubmit"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="更新"
-        app:layout_constraintTop_toBottomOf="@+id/editDailyReportFormContent" />
+            <DatePicker
+                android:id="@+id/editDailyReportFormDate"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:datePickerMode="spinner"
+                app:layout_constraintTop_toBottomOf="@+id/editDailyReportLabelDate" />
+
+            <TextView
+                android:id="@+id/editDailyReportLabelTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:text="@string/dailyReportTitle"
+                app:layout_constraintTop_toBottomOf="@+id/editDailyReportFormDate" />
+
+            <EditText
+                android:id="@+id/editDailyReportFormTitle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="text"
+                android:maxLines="1"
+                app:layout_constraintTop_toBottomOf="@+id/editDailyReportLabelTitle" />
+
+            <TextView
+                android:id="@+id/editDailyReportLabelContent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:text="@string/dailyReportContent"
+                app:layout_constraintTop_toBottomOf="@+id/editDailyReportFormTitle" />
+
+            <EditText
+                android:id="@+id/editDailyReportFormContent"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@+id/editDailyReportLabelContent" />
+
+            <Button
+                android:id="@+id/editDailyReportButtonSubmit"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="40dp"
+                android:background="@color/colorOK"
+                android:text="@string/update"
+                android:textSize="16sp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/editDailyReportFormContent" />
+        </android.support.constraint.ConstraintLayout>
+
+    </ScrollView>
+
 </android.support.constraint.ConstraintLayout>
