--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -17,7 +17,9 @@
             android:id="@+id/settingsButtonToBack"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="戻る" />
+            android:background="@android:color/transparent"
+            android:text="@string/back"
+            android:textColor="@color/colorLink" />
     </android.support.v7.widget.Toolbar>
 
     <ListView
