--- a/app/src/main/res/layout/activity_daily_report_index.xml
+++ b/app/src/main/res/layout/activity_daily_report_index.xml
@@ -41,6 +41,8 @@
         android:id="@+id/dailyReportIndexDailyReportList"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:divider="@color/colorDivider"
+        android:dividerHeight="1sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@id/dailyReportIndexToolBar" />
 </android.support.constraint.ConstraintLayout>
