--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -26,6 +26,8 @@
         android:id="@+id/settingsListView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:divider="@color/colorDivider"
+        android:dividerHeight="1sp"
         android:entries="@array/settings"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@id/settingsToolBar" />
